# questioner

./: .env.dist  .gitignore  ConfigInfo.cs  Dockerfile  Program.cs  QuestionBot.csproj  QuestionBot.sln  README.md  bot.py  docker-compose.yml  pyproject.toml  requirements.txt
Async/: BotAsync.cs  DocumentAsync.cs  SecurityAsync.cs  Tasks.cs  TasksAsync.cs
Data/: AppDbContext.cs  Keyboards.cs  Models.cs  QueueModels.cs  Substitution.cs
infrastructure/database/: setup.py
infrastructure/database/models/: __init__.py  connection.py  dialog.py  dialogHistories.py  dialogHistory.py  pairs.py  question.py  settings.py  user.py  users.py
infrastructure/database/repo/: connections.py  dialog.py  dialogHistories.py  pairs.py  question.py  questions.py  requests.py  settings.py  users.py
infrastructure/migrations/: env.py
infrastructure/migrations/versions/: 001_create_questions.py  002_create_messages_pairs.py  003_create_settings.py
tgbot/: config.py
tgbot/filters/: active_question.py  admin.py  topic.py
tgbot/handlers/: __init__.py
tgbot/handlers/admin/: main.py  stats_extract.py
tgbot/handlers/group/: cmds.py  events.py  main.py  main_cmds.py  topic_cmds.py
tgbot/handlers/user/: active_question.py  dialog.py  main.py  question_return.py  return_question.py
tgbot/middlewares/: AdminRoleMiddleware.py  DatabaseMiddleware.py  MessagePairingMiddleware.py  UserAccessMiddleware.py  database.py  message_pairing.py
tgbot/misc/: dicts.py  helpers.py  roles.py  states.py  topicEmojis.py
tgbot/services/: broadcaster.py  g_sheets.py  scheduler.py
(+16 files in other folders)
