[project]
name = "questionerbot"
version = "0.1.0"
description = "Бот-вопросник"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.21.0",
    "aioodbc>=0.5.0",
    "apscheduler>=3.11.0",
    "betterlogging>=1.0.0",
    "environs>=14.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pytz>=2025.2",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
]
